--- a/Machine_learning/skin_cancer_detection/skin_cancer_detection.ipynb
+++ b/Machine_learning/skin_cancer_detection/skin_cancer_detection.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPB/bFWXs8SPi8vzMCTLY2S",
+      "authorship_tag": "ABX9TyPrcxGBbJr5pzAvBb8vmgCh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,6 +47,7 @@
         "#Step 2. Data Acquisition\n",
         "\n",
         "• Identify the Dataset: For example, download the HAM10000 dataset from a public repository.\n",
+        "\n",
         "• Write a script to download (or load) and extract images and their labels.\n",
         "\n",
         "• Document where the images and CSV files (with metadata and labels) are stored."
@@ -165,7 +166,9 @@
         "#Step 4. Model Construction and Transfer Learning\n",
         "\n",
         "• Use a pre-trained CNN, e.g., MobileNetV2 or EfficientNet, as the base model.\n",
+        "\n",
         "• Freeze the convolution layers and add a custom classification head.\n",
+        "\n",
         "• Fine-tune the model if needed on your skin image data."
       ],
       "metadata": {
@@ -217,6 +220,7 @@
         "#Step 5. Training the Model\n",
         "\n",
         "• Train using model.fit(), specifying training and validation data.\n",
+        "\n",
         "• Monitor training through loss and accuracy metrics. Use callbacks (like ModelCheckpoint and EarlyStopping)."
       ],
       "metadata": {
@@ -227,7 +231,7 @@
       "cell_type": "code",
       "source": [
         "#Example:\n",
-        "-------------------------------------------------\n",
+        "\n",
         "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
         "\n",
         "callbacks = [\n",
@@ -258,12 +262,25 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# adding a finetuning step here!!!"
+      ],
+      "metadata": {
+        "id": "w8O01xZdaxbA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Step 6. Model Evaluation\n",
         "\n",
         "• Evaluate your model on the test set (if you have one) or using cross-validation.\n",
+        "\n",
         "• Calculate metrics such as accuracy, precision, recall, and AUC. Also generate a confusion matrix.\n",
+        "\n",
         "• Write a script to load the test images and run predictions to see how the model performs."
       ],
       "metadata": {
@@ -310,6 +327,7 @@
         "# Step 7. Deployment & Demo Application (Optional)\n",
         "\n",
         "• Build a simple Flask or Streamlit app to show how an image can be uploaded and classified in real time.\n",
+        "\n",
         "• The app should load the saved model and process incoming images."
       ],
       "metadata": {
@@ -385,6 +403,7 @@
         "# Step 9. Conclusion & Next Steps\n",
         "\n",
         "• Conclude by summarizing how you achieved a working AI-based skin cancer detection model.\n",
+        "\n",
         "• Mention that while this is a proof of concept, further work could include:\n",
         "   - Fine-tuning the model more extensively.\n",
         "   - Integrating more advanced data augmentation.\n",
@@ -394,15 +413,6 @@
       "metadata": {
         "id": "Ju8HfEDUW3zj"
       }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "dpuFRRHHTnw_"
-      },
-      "outputs": [],
-      "source": []
     }
   ]
 }
